Make geometry parsing more robust

Instead of counting on terminal_window_set_size() not being called
between gtk_window_parse_geometry(), find out the grid size that
gtk_window_parse_geometry() determined and set that on the active
terminal. Then if terminal_window_set_size() is called, it will get
the correct new size instead of the old one.

terminal_window_parse_geometry() is added to encapsulate this logic.

This replaces the fix in commit 549e45a

http://bugzilla.gnome.org/show_bug.cgi?id=592435